Add some configuration to the root pom.xml