@@ -52,6 +52,42 @@
         <module>mesakit-examples</module>
 
     </modules>
+    
+    <properties>
+        <!-- We need to skip building javadoc for the root
+             bill-of-materials ITSELF, because we do not want
+             aggregation at this level and because it will fail. -->
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <!-- Javadoc hackery - when building everything,
+                our javadoc config comes from here, not from the
+                parent or project pom. -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <!-- add-reads is an experimental javadoc option -->
+                    <additionalOptions>
+                        --limit-modules kivakit.web.wicket
+                        --add-reads org.apiguardian.api=ALL-UNNAMED
+                    </additionalOptions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <skip>${maven.shade.skip}</skip>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 
     <!-- Licensing -->
 
